package com.blackhearth.securevoipclient;

public final class ApplicationConstants {
    public static final String APPLICATION_HOST = "192.168.1.81";
    public static final int APPLICATION_PORT = 2137;
    public static final String APPLICATION_ENDPOINT = "http://192.168.1.81:8080";

    private ApplicationConstants() {
    }
}
