package com.blackhearth.securevoipclient.client.connection.dto;

import lombok.Data;

import java.io.Serializable;

@Data
public class VoIPConnectionResponse {
    private String message;
}
