package com.blackhearth.securevoipclient.client.network;

public final class NetworkConstants {
    public static final int MAX_MESSAGE_RECEIVED = 1616;

    private NetworkConstants() {
    }
}
