package com.blackhearth.securevoipclient.client.register;

class RegisterConstants {

    static final int ZERO = 0;
    static final int ONE = 1;
    static final int TWO = 2;
    static final int THREE = 3;
    static final String FILE_NAME = "/config.dat";
    static final String REGISTER_ENDPOINT = "/api/user/register";
}
