package com.blackhearth.securevoipclient.client.register;

public class RegisterException extends RuntimeException {
    public RegisterException(Exception ex) {
        super(ex);
    }
}
