package com.blackhearth.securevoipclient.client.waitingroom;

public class WaitingRoomConstants {
    public static final String WAITING_ROOM_ENDPOINT = "/api/waiting-room";

    private WaitingRoomConstants() {
    }
}
