package com.blackhearth.securevoipclient.rsa;

public class ConverterRuntimeException extends RuntimeException {
    public ConverterRuntimeException(Exception ex) {
        super(ex);
    }
}
